Rename all instances of Name to Customer